; ModuleID = '/home/carl/AnghaBench/kphp-kdb/binlog/extr_pack-binlog.c_row.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/binlog/extr_pack-binlog.c_row.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"%s:\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @row(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @strlen(i8* %4)
  %6 = add nsw i32 %5, 1
  store i32 %6, i32* %3, align 4
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %7)
  br label %9

9:                                                ; preds = %12, %1
  %10 = load i32, i32* %3, align 4
  %11 = icmp slt i32 %10, 17
  br i1 %11, label %12, label %16

12:                                               ; preds = %9
  %13 = call i32 @putchar(i8 signext 32)
  %14 = load i32, i32* %3, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %3, align 4
  br label %9

16:                                               ; preds = %9
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @putchar(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
